--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,12 +3,16 @@
     <!-- Strings related to login -->
     <string name="prompt_email">Email</string>
     <string name="prompt_password">Password</string>
-    <string name="action_sign_in">Sign in or register</string>
-    <string name="action_sign_in_short">Sign in</string>
+    <string name="action_login">Masuk</string>
     <string name="welcome">"Welcome!"</string>
     <string name="invalid_username">Not a valid username</string>
     <string name="invalid_password">Password must be >5 characters</string>
     <string name="login_failed">"Login failed"</string>
-    <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="header_welcome">Selamat datang di Cericode!</string>
+    <string name="subheading_login">Bagikan pengalaman belajar, cerita suksesmu, atau simak bagaimana kisah orang-orang sukses yang belajar disini!</string>
+    <string name="register_cta">Daftar Disini!</string>
+    <string name="no_account">Belum punya akun?</string>
+    <string name="login_illust">Login Illustration</string>
+    <string name="action_login_guest">Masuk Sebagai Tamu</string>
 </resources>
