--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,8 +11,12 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="header_welcome">Selamat datang di Cericode!</string>
     <string name="subheading_login">Bagikan pengalaman belajar, cerita suksesmu, atau simak bagaimana kisah orang-orang sukses yang belajar disini!</string>
-    <string name="register_cta">Daftar Disini!</string>
+    <string name="register_cta">Daftar disini!</string>
     <string name="no_account">Belum punya akun?</string>
     <string name="login_illust">Login Illustration</string>
     <string name="action_login_guest">Masuk Sebagai Tamu</string>
+    <string name="header_register">Silahkan lengkapi data diri dibawah untuk mulai berbagi</string>
+    <string name="have_account">Sudah punya akun?</string>
+    <string name="login_cta">Masuk disini!</string>
+    <string name="prompt_name">Nama</string>
 </resources>
