--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,7 +8,6 @@
     <string name="welcome">"Welcome!"</string>
     <string name="invalid_username">Not a valid username</string>
     <string name="invalid_password">Password must be >5 characters</string>
-    <string name="login_failed">"Login failed"</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="header_welcome">Selamat datang di Cericode!</string>
     <string name="subheading_login">Bagikan pengalaman belajar, cerita suksesmu, atau simak bagaimana kisah orang-orang sukses yang belajar disini!</string>
@@ -20,4 +19,6 @@
     <string name="have_account">Sudah punya akun?</string>
     <string name="login_cta">Masuk disini!</string>
     <string name="prompt_name">Nama</string>
+    <string name="login_success_msg">Akun berhasil dibuat, silahkan masuk menggunakan akun tersebut.</string>
+    <string name="login_failed_msg">Akun sudah pernah didaftarkan</string>
 </resources>
