feat: layout revision change text input layout's hint into regular text view on top of text input's

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,7 @@
 <resources>
     <string name="app_name">Story Apps</string>
     <!-- Strings related to login -->
+    <string name="prompt_name">Name</string>
     <string name="prompt_email">Email</string>
     <string name="prompt_password">Password</string>
     <string name="action_login">Masuk</string>
@@ -15,10 +16,9 @@
     <string name="no_account">Belum punya akun?</string>
     <string name="login_illust">Login Illustration</string>
     <string name="action_login_guest">Masuk Sebagai Tamu</string>
-    <string name="header_register">Silahkan lengkapi data diri dibawah untuk mulai berbagi</string>
+    <string name="header_register">Silahkan lengkapi data diri dibawah untuk mulai berbagi!</string>
     <string name="have_account">Sudah punya akun?</string>
     <string name="login_cta">Masuk disini!</string>
-    <string name="prompt_name">Nama</string>
     <string name="reg_success_msg">Akun berhasil dibuat, silahkan masuk menggunakan akun tersebut.</string>
     <string name="reg_failed_msg">Akun sudah pernah didaftarkan</string>
     <string name="login_failed_msg">E-mail atau password salah!</string>
