--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,8 +7,6 @@
     <string name="action_login">Masuk</string>
     <string name="action_register">Daftar</string>
     <string name="welcome">"Welcome!"</string>
-    <string name="invalid_username">Not a valid username</string>
-    <string name="invalid_password">Password must be >5 characters</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="header_welcome">Selamat datang di Cericode!</string>
     <string name="subheading_login">Bagikan pengalaman belajar, cerita suksesmu, atau simak bagaimana kisah orang-orang sukses yang belajar disini!</string>
@@ -23,4 +21,9 @@
     <string name="reg_failed_msg">Akun sudah pernah didaftarkan</string>
     <string name="login_failed_msg">E-mail atau password salah!</string>
     <string name="login_welcome">Selamat datang </string>
+    <string name="error_message_password">Password minimal harus 6 kata</string>
+    <string name="prompt_hint_password">Silakan masukkan password…</string>
+    <string name="prompt_hint_email">Silakan masukkan e-mail…</string>
+    <string name="error_message_email">Format e-mail yang dimasukkan belum benar</string>
+    <string name="error_message_name">Nama tidak boleh kosong</string>
 </resources>
