--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,4 +31,5 @@
     <string name="user_profile_image">User profile image</string>
     <string name="nama_user">Nama User</string>
     <string name="logout">Keluar</string>
+    <string name="message_for_guest">Mohon maaf, Anda membutuhkan sebuah akun untuk dapat membaca konten pada halaman ini. Namun anda tetap dapat membagikan cerita Anda, untuk orang lain dengan menekan tombol berbagi atau tombol dibawah ini untuk mendaftar dan mulai membaca!</string>
 </resources>
