feat: implement detail story checkpoint before changing flow(not done)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,4 +33,5 @@
     <string name="logout">Keluar</string>
     <string name="message_for_guest">Mohon maaf, Anda membutuhkan sebuah akun untuk dapat membaca konten pada halaman ini.\n\nNamun anda tetap dapat membagikan cerita Anda, untuk orang lain dengan menekan tombol berbagi atau tombol dibawah ini untuk mendaftar dan mulai membaca!</string>
     <string name="share">Berbagi</string>
+    <string name="guest">Tamu</string>
 </resources>
