--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,14 +1,13 @@
 <resources>
     <string name="app_name">Dico-toori</string>
     <!-- Strings related to login -->
-    <string name="prompt_name">Name</string>
+    <string name="prompt_name">Nama</string>
     <string name="prompt_email">Email</string>
     <string name="prompt_password">Password</string>
     <string name="action_login">Masuk</string>
     <string name="action_register">Daftar</string>
     <string name="welcome">"Welcome!"</string>
-    <string name="hello_blank_fragment">Hello blank fragment</string>
-    <string name="header_welcome">Selamat datang di Cericode!</string>
+    <string name="header_welcome">Selamat datang di Dico-toori!</string>
     <string name="subheading_login">Bagikan pengalaman belajar, cerita suksesmu, atau simak bagaimana kisah orang-orang sukses yang belajar disini!</string>
     <string name="register_cta">Daftar disini!</string>
     <string name="no_account">Belum punya akun?</string>
@@ -33,9 +32,10 @@
     <string name="logout">Keluar</string>
     <string name="message_for_guest">Mohon maaf, Anda membutuhkan sebuah akun untuk dapat membaca konten pada halaman ini.\n\nNamun anda tetap dapat membagikan cerita Anda, untuk orang lain dengan menekan tombol berbagi atau tombol dibawah ini untuk mendaftar dan mulai membaca!</string>
     <string name="share">Berbagi</string>
-    <string name="guest">Tamu</string>
+    <string name="tamu">Tamu</string>
+    <string name="guest">Guest</string>
     <string name="camera">Kamera</string>
-    <string name="gallery">Gallery</string>
+    <string name="gallery">Galeri</string>
     <string name="tambahkan_story">Tambahkan Story</string>
     <string name="upload">Unggah</string>
     <string name="deskripsi">Deskripsi</string>
@@ -45,4 +45,10 @@
     <string name="upload_success">Berhasil mengupload kisah</string>
     <string name="upload_failed">Gagal menunggah kisah, silahkan coba lagi</string>
     <string name="no_image">Silahkan masukkan berkas gambar terlebih dahulu.</string>
+    <string name="dicoding_sutoori">Dicoding Sutoori</string>
+    <string name="setting">Pengaturan</string>
+    <string name="story">Kisah</string>
+    <string name="sorry_guest">Maaf Tamu</string>
+    <string name="fail_load_data">Gagal menampilkan data, mohon coba lagi nanti</string>
+    <string name="data_not_available">Mohon maaf, data sedang tidak tersedia.</string>
 </resources>
