--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -51,4 +51,7 @@
     <string name="sorry_guest">Maaf Tamu</string>
     <string name="fail_load_data">Gagal menampilkan data, mohon coba lagi nanti</string>
     <string name="data_not_available">Mohon maaf, data sedang tidak tersedia.</string>
+    <string name="home_menu">Home</string>
+    <string name="location_menu">Location</string>
+    <string name="setting_menu">Setting</string>
 </resources>
