--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -55,4 +55,5 @@
     <string name="home_menu">Home</string>
     <string name="location_menu">Location</string>
     <string name="setting_menu">Setting</string>
+    <string name="language">Language</string>
 </resources>
