--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -55,4 +55,6 @@
     <string name="location_menu">Lokasi</string>
     <string name="setting_menu">Pengaturan</string>
     <string name="language">Bahasa</string>
+    <string name="error_resources">Style tidak ditemukan. Error: </string>
+    <string name="error_parse_style">Gagal parse style</string>
 </resources>
