feat: implement share location feature (while posting) and google map feature to show location of all stories from API

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -58,4 +58,7 @@
     <string name="language">Language</string>
     <string name="error_resources">\"Can\'t find style. Error: \"</string>
     <string name="error_parse_style">Style parsing failed</string>
+    <string name="cant_load_loc">Can\'t load story\'s location</string>
+    <string name="your_location">Your location</string>
+    <string name="share_loc">Share location?</string>
 </resources>
