--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -61,4 +61,5 @@
     <string name="cant_load_loc">Can\'t load story\'s location</string>
     <string name="your_location">Your location</string>
     <string name="share_loc">Share location?</string>
+    <string name="loc_not_found">Lokasi not found. Please try again</string>
 </resources>
