--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -62,4 +62,5 @@
     <string name="your_location">Your location</string>
     <string name="share_loc">Share location?</string>
     <string name="loc_not_found">Lokasi not found. Please try again</string>
+    <string name="retry">Retry</string>
 </resources>
