--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -61,4 +61,5 @@
     <string name="your_location">Lokasi kamu</string>
     <string name="share_loc">Bagikan lokasi?</string>
     <string name="loc_not_found">Lokasi tidak ditemukan. Coba lagi</string>
+    <string name="retry">Coba lagi</string>
 </resources>
